--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,11 @@
   --blue-color1: #DAE8F3;
   --blue-color2: #146C94;
   --blue-color3: #295B7F;
+  --blue-color4: #E6F0F7;
   --grey-color1: #A5A9AB;
   --grey-color2: #808080;
   --grey-color3: #D9D9D9;
+  --grey-color4: #BFC2C3;
 }
 
 html{
