--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,18 @@
   --bg-color1: #F6F1F1;
   --green-color1: #00D6BB;
   --green-color2: #BFEBE3;
+  --green-color3: #00B89F;
+  --green-color4: #348379;
   --blue-color1: #DAE8F3;
   --blue-color2: #146C94;
   --blue-color3: #295B7F;
   --blue-color4: #E6F0F7;
+  --blue-color5: #0070BB;
   --grey-color1: #A5A9AB;
   --grey-color2: #808080;
   --grey-color3: #D9D9D9;
   --grey-color4: #BFC2C3;
+  --orange-color1: #E25822;
 }
 
 html{
@@ -39,6 +43,10 @@ body{
   font-size: 14px !important;
 }
 
+.fs-11{
+  font-size: 12px !important;
+}
+
 .bgBlue4{
   background-color: var(--blue-color4);
 }
@@ -63,7 +71,15 @@ body{
   color: var(--blue-color3);
 }
 
+.textBlue5{
+  color: var(--blue-color5) !important;
+}
+
 .textGrey2{
   color: var(--grey-color2) !important;
+}
+
+.textOrange1{
+  color: var(--orange-color1) !important;
 }
 
