--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --bg-color1: #F6F1F1;
+  --bg-color1: #F8F8FFff;
   --green-color1: #00D6BB;
   --green-color2: #BFEBE3;
   --green-color3: #00B89F;
