add filter button + fix calculate distance, rootbg

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --bg-color1: #F8F8FFff;
+  --bg-color1: rgb(248,248,255);
   --green-color1: #00D6BB;
   --green-color2: #BFEBE3;
   --green-color3: #00B89F;
