update code for searching location

--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -25,3 +25,6 @@ button.active.ant-btn.css-dev-only-do-not-override-1me4733.ant-btn-primary.my-3.
     width: 400px !important;
 }
 
+/* span.anticon.anticon-eye-invisible.ant-input-password-icon {
+    display: none;
+} */
