--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -43,6 +43,7 @@
     height: 210px;
     overflow-y: auto;
     overflow-x: hidden;
+    padding: 0px !important;
 }
 
 .avatarContact{
@@ -57,3 +58,15 @@
     height: 100%;
   }
   
+.avatarChosenAdmin{
+    width: 80px;
+    margin-top: -55px;
+    margin-bottom: 10px;
+    border: 1px solid white;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+:where(.css-dev-only-do-not-override-1me4733).ant-modal .ant-modal-footer .ant-btn+.ant-btn:not(.ant-dropdown-trigger) {
+    background-color: var(--green-color3);
+}
